Smart_service: candles refactoring